# hdf5-blosc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  RELEASE_NOTES.txt  pixi.toml
.github/workflows/: test.yml
src/: blosc_filter.c  blosc_filter.h  blosc_plugin.c  example.c  test_array.c  test_compound.c  test_strings.c  test_tiny_chunks.c
